--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="skill-row">
           <img
             class="web-image"
-            src="https://media.giphy.com/media/3p50WGyUqeU5W/giphy.gif"
+            src="https://media0.giphy.com/media/S8ZHY5Y9ULhSAGPg50/giphy.gif?cid=ecf05e47avngp0f0bkqpnwnmsrpvv4nbn821e25grqivp5ue&rid=giphy.gif"
             alt="computer-pic"
           />
           <h3>Web Development</h3>
