--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
 
     <div class="div3">
-      <a class="footer-link" href="https://twitter.com/">Facebook</a>
+      <a class="footer-link" href="https://www.facebook.com/profile.php?id=100006450858312">Facebook</a>
       <a
         class="footer-link"
         href="https://bd.linkedin.com/in/alif-al-hasan-3217791ab"
